--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Рандомайзер решений</title>
+    <title>Рандомайзер рішень</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Что мне сделать?</h1>
+        <h1>Що мені зробити?</h1>
 
         <select id="category">
-            <option value="eat">Что cоесть?</option>
-            <option value="fun">Что cделать?</option>
-            <option value="watch">Что посмотреть?</option>
+            <option value="eat">Що з'їсти?</option>
+            <option value="fun">Що зробити?</option>
+            <option value="watch">Що подивитись?</option>
             <option value="challenge">Мини-челлендж</option>
-            <option value="funny">Смешной совет</option>
+            <option value="funny">Смішне завдання</option>
         </select>
 
-        <button id="generate">Выбрать</button>
+        <button id="generate">Вибрати</button>
 
         <div id="result" class="hidden"></div>
     </div>
