--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>Що мені зробити?</h1>
 
         <select id="category">
-            <option value="eat">Що з'їсти</option>
-            <option value="fun">Що зробити</option>
-            <option value="watch">Що подивитись</option>
+            <option value="eat">Що з'їсти?</option>
+            <option value="fun">Що зробити?</option>
+            <option value="watch">Що подивитись?</option>
             <option value="challenge">Мини-челлендж</option>
             <option value="funny">Смішне завдання</option>
         </select>
